Youtube commands working correctly, outline for LibraryManager added, GET AUDIO STREAMING NEXT